--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,12 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -27,6 +33,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>The Graph ETHDenver dApp</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
+      </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
