--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>The Graph ETHDenver dApp</title>
+    <title>Bitcoin Earn</title>
     <style>
       @import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
       </style>
